chore: add icon and color

--- a/action.yml
+++ b/action.yml
@@ -28,3 +28,7 @@ runs:
         INPUT_PATH: ${{ inputs.path }}
         INPUT_EXT: ${{ inputs.ext }}
       run: python main.py
+
+branding:
+  icon: file
+  color: gray-dark
