--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,16 @@ jobs:
       - name: Output results
         run: |
           echo ${{ matrix.paths }}
+  Release:
+    if: github.ref_name == 'master'
+    needs: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2.4.0
+      - name: Publish Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          npm install
+          npx semantic-release
