--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,12 @@ name: Test
 
 on:
   push:
-    tags:
+    tags-ignore:
       - '*'
     branches:
       - 'master'
+    paths-ignore:
+      - 'CHANGELOG.md'
   pull_request:
   workflow_dispatch:
 
@@ -15,12 +17,12 @@ jobs:
     outputs:
       paths: ${{ steps.list-files.outputs.paths }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2.4.0
       - name: List Files
         id: list-files
-        uses: mirko-felice/list-files-action@v2.0.0
+        uses: mirko-felice/list-files-action@v3.0.0
         with:
+          repo: ${{ github.repository }}
+          ref: ${{ github.ref_name }}
           path: "."
           ext: ".yml"
   Test:
@@ -30,8 +32,32 @@ jobs:
         paths: ${{ fromJson(needs.list-files.outputs.paths) }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2.4.0
       - name: Output results
         run: |
           echo ${{ matrix.paths }}
+  Release:
+    if: github.ref_name == 'master'
+    needs: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2.4.0
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Import GPG
+        uses: crazy-max/ghaction-import-gpg@v4.1.0
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+      - name: Publish Release
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_COMMITTER_NAME: Mirko Felice
+          GIT_COMMITTER_EMAIL: mirko.felice@studio.unibo.it
+          GIT_AUTHOR_NAME: Mirko Felice
+          GIT_AUTHOR_EMAIL: mirko.felice@studio.unibo.it
+        run: |
+          npm install
+          npx semantic-release
