chore: fix workflow to run correctly

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: List Files
         id: list-files
-        uses: mirko-felice/list-files-action@v3.0.0
+        uses: mirko-felice/list-files-action@master
         with:
           repo: ${{ github.repository }}
           ref: ${{ github.ref_name }}
